[gd_scene load_steps=4 format=3 uid="uid://dydpngwuigfw6"]

[ext_resource type="Script" path="res://Inventory/InventoryInterface.gd" id="1_4sv1c"]
[ext_resource type="PackedScene" uid="uid://dg66svt81471l" path="res://Inventory/InventoryContainer.tscn" id="1_u0o36"]
[ext_resource type="PackedScene" uid="uid://cd7s2q2uqutuf" path="res://Inventory/InventorySlot.tscn" id="3_tk45u"]

[node name="InventoryInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4sv1c")

[node name="PlayerInventory" parent="." instance=ExtResource("1_u0o36")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 53.0

[node name="ExternalInventory" parent="." instance=ExtResource("1_u0o36")]
visible = false
layout_mode = 0
offset_left = 669.0
offset_top = 184.0
offset_right = 709.0
offset_bottom = 227.0

[node name="GrabbedSlot" parent="." instance=ExtResource("3_tk45u")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
